--- a/public/bower.json
+++ b/public/bower.json
@@ -61,6 +61,7 @@
     "sweetalert": "~0.4.2",
     "textAngular": "~1.3.7",
     "toastr": "~2.1.0",
-    "whatsapp-sharing": "~1.3.3"
+    "whatsapp-sharing": "~1.3.3",
+    "angular-payments": "2472bc9befa25678"
   }
 }
